@@ -392,11 +392,8 @@ main (int argc, char *const *argv)
   if (0 != curl_global_init (CURL_GLOBAL_WIN32))
     return 2;
   errorCount += testInternalPost ();
-  if (0)
-    {
-      errorCount += testMultithreadedPost ();
-      errorCount += testExternalPost ();
-    }
+  errorCount += testMultithreadedPost ();
+  errorCount += testExternalPost ();
   if (errorCount != 0)
     fprintf (stderr, "Error (code: %u)\n", errorCount);
   curl_global_cleanup ();
