@@ -363,11 +363,8 @@ main (int argc, char *const *argv)
   if (0 != curl_global_init (CURL_GLOBAL_WIN32))
     return 2;
   errorCount += testInternalPut ();
-  if (0)
-    {
-      errorCount += testMultithreadedPut ();
-      errorCount += testExternalPut ();
-    }
+  errorCount += testMultithreadedPut ();
+  errorCount += testExternalPut ();
   if (errorCount != 0)
     fprintf (stderr, "Error (code: %u)\n", errorCount);
   curl_global_cleanup ();
